[package]
name = "interrogate_macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.28"
proc-macro-error = "1.0.4"
convert_case = "0.4.0"
itertools = "0.10.1"
